--- a/_posts/2014-07-18-hello.md
+++ b/_posts/2014-07-18-hello.md
@@ -3,7 +3,7 @@ layout: post
 title: Hello
 comments: true
 ---
-In my previous failed attempts to maintain a personal website there has been a evident lack of dinosaurs involved so will attempt to change that.
+In my previous failed attempts to maintain a personal website there has been a evident lack of dinosaurs involved so will attempt to change that with this one.
 
 Here's a free code snippet you can use in your next project: 
 
